...
            <ImageView
                android:id="@+id/image_create_event_banner"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:contentDescription="@string/event_banner"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toTopOf="@+id/text_create_event_title"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/uploadEventBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_create_event_banner" />

            <EditText
                android:id="@+id/text_create_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="textStart"
...
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/create_event_attend_limit" />

            <EditText
                android:id="@+id/create_event_attend_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
...
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_create_event_description_qr">

                <Button
                    android:id="@+id/button_create_event_generate_qr_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Generate QR Code"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_create_event_generate_qr_description"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_create_event_description_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="Description QR Code"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_create_event_checkin_qr">

                <Button
                    android:id="@+id/button_create_event_generate_qr_checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Generate QR Code"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_create_event_generate_qr_checkin"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_create_event_checkin_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="Checkin QR Code"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:id="@+id/select_new_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Location" />

            <Button
                android:id="@+id/button_create_event_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Event"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
