...
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="12dp"
            android:text="Display user name:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@id/profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <EditText
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:text="Email_address"
            android:textColor="@color/black"
            android:textSize="20dp"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="28dp"
            android:text="Phone number:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@id/profile_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <EditText
...
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20dp"
            android:text="Homepage Link:"
            android:textColor="#656565"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@id/profile_homepage_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_phone_number" />

        <EditText
...
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/profile_save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_homepage_link">

            <TextView
                android:layout_width="match_parent"
...
                android:text="Allow Geolocation?"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/profile_geolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_save_button"
...
