...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/nav_events"
            android:title="@string/nav_my_events"/>
        <item
            android:id="@+id/nav_host_event"
            android:icon="@drawable/nav_hosted_events"
            android:title="@string/nav_hosted_events"/>
        <item
            android:id="@+id/nav_explore_event"
            android:icon="@drawable/nav_explore"
            android:title="@string/nav_explore_events"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_all_profile"
            android:icon="@drawable/nav_all_profiles"
            android:title="@string/nav_all_profile"/>
...
            android:title="@string/nav_all_event"/>
        <item
            android:id="@+id/nav_all_images"
            android:icon="@drawable/nav_all_images"
            android:title="@string/nav_all_image"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/nav_notifications"
            android:title="@string/nav_notifications"/>
    </group>
</menu>
