...
                    android:layout_weight="1" />
                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/edit_event_show_sign_ups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/lightpink"
                    android:text="SHOW SIGN-UPS"
                    android:textSize="15dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/edit_event_notify_attendees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:backgroundTint="#BCB7B7"
                android:text="NOTIFY ATTENDEES"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_notify_attendees" />

            <ImageView
                android:id="@+id/edit_event_check_in_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit"
                tools:src="@tools:sample/avatars" />
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_export_checkin_code" />

            <ImageView
                android:id="@+id/edit_event_promo_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
...
